test runs on ubuntu, clone-down runs on runner

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,7 +2,7 @@ name: pipeline
 on: push
 jobs:
   Clone-down:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: checkout-step
         uses: actions/checkout@v2
