--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,7 +2,7 @@ name: pipeline
 on: push
 jobs:
   Clone-down:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: checkout-step
         uses: actions/checkout@v3
@@ -13,7 +13,7 @@ jobs:
           path: .
 
   Test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: Clone-down
     steps:
       - name: Download artifact
