--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,3 +1,8 @@
+env:
+  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  docker_password: ${{ secrets.DOCKER_PASSWORD }}
+  GIT_COMMIT: ${{ github.sha }}
+
 name: pipeline
 on: push
 jobs:
@@ -23,3 +28,18 @@ jobs:
           path: .
       - name: test-step
         run: cd backend && go test -v
+        
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Test,Build]
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: code
+          path: .
+      - run: export GIT_COMMIT="GA-$GITHUB_SHA"
+      - name: Build Docker image
+        run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+      - name: Push Docker image
+        run: chmod +x ci/push-docker.sh && ci/push-docker.sh 
