--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,34 @@
 version: '3.1'
-
 services:
-  frontend_container:
-    image: frontend
-    ports:
-      - 8080:80
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     environment:
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_NAME: wordpressdb
-      WORDPRESS_DB_HOST: mysql-container
-      WORDPRESS_DB_PASSWORD: wordpress
+      BACKEND_DNS: backend
+      BACKEND_PORT: 9000
+    ports:
+      - 8085:8080
     depends_on:
-      - mysql_container
-  
+      - backend
+
+  backend:
+    container_name: backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    environment:
+      REDIS_DNS: redis
+    depends_on:
+      - redis
+
   redis:
+    container_name: redis
+    command: redis-server --appendonly yes
     image: redis:latest
+    expose: 
+      - 6379
+    volumes:
+        - ./redis-volume:/data
+
