--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,7 +28,24 @@ jobs:
           path: .
       - name: test-step
         run: cd backend && go test -v
-        
+  
+  Build:
+    runs-on: ubuntu-latest
+    needs: Clone-down
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: code
+          path: .
+      - name: build-step
+        run: go build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code
+          path: .
+
   Docker-image:
     runs-on: ubuntu-latest
     needs: [Test,Build]
