--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -46,17 +46,16 @@ jobs:
           name: code
           path: .
 
-  Docker-image:
-    runs-on: ubuntu-latest
-    needs: [Test,Build]
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: code
-          path: .
-      - run: export GIT_COMMIT="GA-$GITHUB_SHA"
-      - name: Build Docker image
-        run: chmod +x ci/docker_build.sh && ci/docker_build.sh
-      - name: Push Docker image
-        run: chmod +x ci/docker_push.sh && ci/docker_push.sh 
+  Docker-Image:
+      runs-on: ubuntu-latest
+      needs: [Build, Test]
+      steps:
+        - name: Download build
+          uses: actions/download-artifact@v2
+          with:
+            name: code
+            path: .
+        - name: build docker
+          run: chmod +x ci/docker_docker.sh && ci/docker_docker.sh
+        - name: push docker
+          run: chmod +x ci/docker_push.sh && ci/docker_push.sh
