--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -56,6 +56,6 @@ jobs:
             name: code
             path: .
         - name: build docker
-          run: chmod +x ci/docker_docker.sh && ci/docker_docker.sh
+          run: chmod +x ci/docker_build.sh && ci/docker_build.sh
         - name: push docker
           run: chmod +x ci/docker_push.sh && ci/docker_push.sh
