--- a/.github/workflows/pipeline_prod.yaml
+++ b/.github/workflows/pipeline_prod.yaml
@@ -4,10 +4,7 @@ env:
   GIT_COMMIT: ${{ github.sha }}
 
 name: pipeline_prod
-on:
-  pull_request:
-    branches:
-      - main
+on: push
 jobs:
   Clone-down:
     runs-on: ubuntu-latest
@@ -64,7 +61,7 @@ jobs:
           run: chmod +x ci/docker_push.sh && ci/docker_push.sh
         - name: push frontend
           run: chmod +x ci/docker_frontend_push.sh && ci/docker_frontend_push.sh
-   Deploy:
+  Deploy:
       runs-on: ubuntu-latest
       needs: [Build, Test, Docker-Image]
       steps:
