add kubectl to run command in deploy tag

--- a/.github/workflows/pipeline_prod.yaml
+++ b/.github/workflows/pipeline_prod.yaml
@@ -71,4 +71,4 @@ jobs:
             name: code
             path: .
         - name: build kubernetes
-          run: chmod +x ci/kube.sh && ci/kube.sh
+          run: kubectl apply -f kubernetes/
