added volume to redis db in k8s yaml

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,6 +18,9 @@ spec:
         containers:
         - name: redis
           image: redis:latest
+          volumeMounts:
+          - name: data
+            mountPath: ./redis-volume:/data
 
 ---
 
