--- a/.github/workflows/pipeline_prod.yaml
+++ b/.github/workflows/pipeline_prod.yaml
@@ -67,7 +67,7 @@ jobs:
         - name: push frontend
           run: chmod +x ci/docker_frontend_push.sh && ci/docker_frontend_push.sh
   Deploy:
-      runs-on: [self-hosted]
+      runs-on: [self-hosted, linux, ubuntu]
       needs: [Build, Test, Docker-Image]
       steps:
         - name: Download build
